# prb_21

./: .gitignore  README.md
Lesson_1/Task_1/: String_length.py
Lesson_1/Task_2/: Palindrome.py
Lesson_1/Task_3/: diff_symbols.py
Lesson_1/Task_4/: problem500A.py
Lesson_1/Task_5/: problem266B.py
Lesson_2/Task_1/: Translate_to_morse.py
Lesson_2/Task_2/: problem58A.py
Lesson_2/Task_3/: problem200B.py
Lesson_3/Task_1/: nmea_explorer.py  nmea_explorer_no_tuple_V1.1.py  nmea_explorer_pynmeagps_V1.0.py  nmea_explorer_pynmeagps_V1.1.py  nmea_explorer_tuple_V1.2.py
Lesson_3/Task_2/: problem1630C.py
Lesson_3/Task_3/: problem1324C.py
Lesson_4/Task_1/square_turtle/: CMakeLists.txt  package.xml
Lesson_4/Task_1/square_turtle/scripts/: square_turtle.py
